@@ -3,6 +3,7 @@
 - Remove default :method sorting for associations, it wasn't useful and can be slow
 - Rescue from ActiveScaffold::ActionNotAllowed and ActiveScaffold::RecordNotAllowed with 401 response, it can be overrided with deny_access method in ApplicationController.
 - Allow to set arrays in search_sql so one column can search in multiple db columns, resulting sql chunks will be OR'ed
+- Hide text input on searching for null or not null
 
 = 3.2.12
 - improve support for tableless models, add support for count
